tests/ui/errors/snapshots/infer_type_mismatch_two_packages_share_a_leaf_name.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[main.lis:9:16]
  8 │   let b = beta.Config { n: 1 }
  9 │   let _ = take(b)
    ·                ┬
    ·                ╰── expected `alpha.Config`, found `beta.Config`
 10 │ }
    ╰────
  help: `take()` expects `alpha.Config` for its first argument `c`. Convert the value to `alpha.Config`, or change the parameter type · code: [infer.type_mismatch]
