tests/ui/errors/snapshots/infer_type_not_found.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type not found
   ╭─[test.lis:3:10]
 2 │ fn test() {
 3 │   let x: UnknownType = 42;
   ·          ─────┬─────
   ·               ╰── not declared or imported
 4 │ }
   ╰────
  help: Define or import this type · code: [resolve.type_not_found]
