tests/ui/errors/snapshots/infer_type_not_found_enum_bound.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type not found
   ╭─[test.lis:2:13]
 1 │ 
 2 │ enum Foo<T: Undefined> {
   ·             ────┬────
   ·                 ╰── not declared or imported
 3 │   Bar(T)
   ╰────
  help: Define or import this type · code: [resolve.type_not_found]
