tests/ui/errors/snapshots/infer_type_not_found_interface_bound.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type not found
   ╭─[test.lis:2:18]
 1 │ 
 2 │ interface Foo<T: Undefined> {
   ·                  ────┬────
   ·                      ╰── not declared or imported
 3 │   fn get() -> T
   ╰────
  help: Define or import this type · code: [resolve.type_not_found]
