tests/ui/errors/snapshots/infer_type_not_found_nested_in_generic_annotation.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type not found
   ╭─[test.lis:2:29]
 1 │ 
 2 │ fn test(items: Slice<Option<UnknownType>>) {
   ·                             ─────┬─────
   ·                                  ╰── not declared or imported
 3 │ }
   ╰────
  help: Define or import this type · code: [resolve.type_not_found]
