tests/ui/errors/snapshots/infer_type_not_found_struct_bound.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type not found
   ╭─[test.lis:2:15]
 1 │ 
 2 │ struct Foo<T: Undefined> {}
   ·               ────┬────
   ·                   ╰── not declared or imported
   ╰────
  help: Define or import this type · code: [resolve.type_not_found]
