tests/ui/errors/snapshots/infer_type_not_found_type_alias_bound.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type not found
   ╭─[test.lis:2:13]
 1 │ 
 2 │ type Foo<T: Undefined> = T
   ·             ────┬────
   ·                 ╰── not declared or imported
   ╰────
  help: Define or import this type · code: [resolve.type_not_found]
