tests/ui/errors/snapshots/infer_type_param_not_declared.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Undeclared type parameter
   ╭─[test.lis:6:16]
 5 │ 
 6 │ impl Container<T> {
   ·                ┬
   ·                ╰── not declared by this `impl`
 7 │   fn get(self) -> T {}
   ╰────
  help: Declare the type parameter: `impl<T> Container<T>` · code: [resolve.type_not_found]
