tests/ui/errors/snapshots/infer_type_variable_hint_preserves_param_names.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:9:32]
  8 │   let x = Either.Left("oops");
  9 │   let _: Either<int, string> = x;
    ·                                ┬
    ·                                ╰── expected `Either<int, string>`, found `Either<string, R>`
 10 │ }
    ╰────
  help: Change the type annotation to `Either<string, R>` or convert the value to `Either<int, string>` · code: [infer.type_mismatch]
